<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <groupId>ca.tweetzy</groupId>
    <artifactId>flight</artifactId>
    <version>3.42.0</version>
    <modelVersion>4.0.0</modelVersion>
    <packaging>jar</packaging>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <java.version>16</java.version>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
    </properties>

    <distributionManagement>
        <repository>
            <id>repsy</id>
            <name>Tweetzy Maven Repo On Repsy</name>
            <url>https://repo.repsy.io/mvn/kiran/tweetzy</url>
        </repository>
    </distributionManagement>

    <pluginRepositories>
        <pluginRepository>
            <id>maven-snapshots</id>
            <url>https://repository.apache.org/content/repositories/snapshots/</url>
        </pluginRepository>
    </pluginRepositories>

    <repositories>
        <repository>
            <id>nms-repo</id>
            <url>https://repo.codemc.org/repository/nms/</url>
        </repository>
        <repository>
            <id>codemc-repo</id>
            <url>https://repo.codemc.org/repository/maven-public/</url>
            <layout>default</layout>
        </repository>
        <repository>
            <id>placeholderapi</id>
            <url>https://repo.extendedclip.com/content/repositories/placeholderapi/</url>
        </repository>
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>
        <repository>
            <id>minecraft-repo</id>
            <url>https://libraries.minecraft.net/</url>
        </repository>
    </repositories>
    <dependencies>
        <dependency>
            <groupId>org.spigotmc</groupId>
            <artifactId>spigot</artifactId>
            <version>1.21.7-R0.1-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.mojang</groupId>
            <artifactId>authlib</artifactId>
            <version>6.0.54</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.github.MilkBowl</groupId>
            <artifactId>VaultAPI</artifactId>
            <version>1.7</version>
            <scope>provided</scope>
            <exclusions>
                <exclusion>
                    <groupId>org.bukkit</groupId>
                    <artifactId>bukkit</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>me.clip</groupId>
            <artifactId>placeholderapi</artifactId>
            <version>2.11.5</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>de.tr7zw</groupId>
            <artifactId>item-nbt-api</artifactId>
            <version>2.15.3</version>
        </dependency>
        <dependency>
            <groupId>com.github.cryptomorin</groupId>
            <artifactId>XSeries</artifactId>
            <version>13.5.1</version>
            <scope>compile</scope>
        </dependency>

        <!-- Non-Spigot Plugins -->
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.22</version>
        </dependency>
        <dependency>
            <groupId>org.jetbrains</groupId>
            <artifactId>annotations</artifactId>
            <version>24.0.1</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>1.7.25</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-nop</artifactId>
            <version>1.7.25</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>com.zaxxer</groupId>
            <artifactId>HikariCP</artifactId>
            <version>3.2.0</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>org.yaml</groupId>
            <artifactId>snakeyaml</artifactId>
            <version>2.0</version>
            <scope>compile</scope>
        </dependency>
    </dependencies>

    <build>
        <sourceDirectory>./src/main/java</sourceDirectory>
        <defaultGoal>clean install</defaultGoal>
        <finalName>Flight-${project.version}</finalName>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.2.2</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <release>${java.version}</release>
                </configuration>
            </plugin>
            <plugin>
                <groupId>de.m3y.maven</groupId>
                <artifactId>inject-maven-plugin</artifactId>
                <version>1.3</version>
                <executions>
                    <execution>
                        <phase>process-classes</phase>

                        <goals>
                            <goal>inject</goal>
                        </goals>
                    </execution>
                </executions>

                <configuration>
                    <injections>
                        <injection>
                            <value>${project.version}</value>
                            <pointCut>ca.tweetzy.flight.FlightConstants.getCoreVersion</pointCut>
                        </injection>
                    </injections>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>3.2.1</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.5.1</version>
                <configuration>
                    <artifactSet>
                        <includes>
                            <include>ca.tweetzy:*</include>
                            <include>com.zaxxer:HikariCP*</include>
                            <include>com.github.cryptomorin:*</include>
                            <include>io.github.bananapuncher714:*</include>
                            <include>com.cryptomorin.xseries:*</include>
                            <include>org.yaml:snakeyaml</include>
                            <include>de.tr7zw:*</include>
                        </includes>
                    </artifactSet>
                    <filters>
                        <filter>
                            <artifact>*:*</artifact>
                            <includes>
                                <include>ca/</include>
                                <include>com/zaxxer/</include>
                                <include>com/cryptomorin/xseries/</include>
                                <include>io/github/bananapuncher714/</include>
                                <include>de/tr7zw/</include>
                                <include>org/yaml/</include>
                            </includes>
                            <excludes>
                                <exclude>META-INF/MANIFEST.MF</exclude>
<!--                                <exclude>com/cryptomorin/xseries/particles/ParticleDisplay*</exclude>-->
<!--                                <exclude>com/cryptomorin/xseries/particles/XParticle*</exclude>-->
                                <exclude>com/cryptomorin/xseries/XBiome*</exclude>
                                <exclude>com/cryptomorin/xseries/NMSExtras*</exclude>
                                <exclude>com/cryptomorin/xseries/NoteBlockMusic*</exclude>
<!--                                <exclude>com/cryptomorin/xseries/SkullCacheListener*</exclude>-->
                                <exclude>com/cryptomorin/xseries/XBlock*</exclude>
<!--                                <exclude>com/cryptomorin/xseries/XEnchantment*</exclude>-->
                                <exclude>com/cryptomorin/xseries/XEntity*</exclude>
                                <exclude>com/cryptomorin/xseries/XItemStack*</exclude>
                                <exclude>com/cryptomorin/xseries/XPotion*</exclude>
                                <exclude>com/cryptomorin/xseries/XSound*</exclude>
                                <exclude>com/cryptomorin/xseries/XTag*</exclude>
                            </excludes>
                        </filter>
                    </filters>
                    <relocations>
                        <relocation>
                            <pattern>com.zaxxer.hikari</pattern>
                            <shadedPattern>${project.groupId}.${project.artifactId}.third_party.com.zaxxer</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>org.yaml</pattern>
                            <shadedPattern>${project.groupId}.${project.artifactId}.third_party.org.yaml</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>de.tr7zw.changeme.nbtapi</pattern>
                            <shadedPattern>${project.groupId}.${project.artifactId}.nbtapi</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>com.cryptomorin.xseries</pattern>
                            <shadedPattern>${project.groupId}.${project.artifactId}.utils</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>io.github.bananapuncher714.nbteditor</pattern>
                            <shadedPattern>${project.groupId}.${project.artifactId}.comp</shadedPattern>
                        </relocation>
                    </relocations>
                </configuration>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

</project>
